--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,14 +19,13 @@
 body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
 }
 
-main {
-  flex-grow: 1;
-}
-main:has(.back-link) {
-  text-align: center;
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 }
