--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,19 +1,21 @@
 /* Styles for Mobile devices */
 .container {
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1158px;
+  min-height: 750px;
+  padding: 15px;
 }
 /* Styles for Tablet devices */
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
-}
+} */
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+/* @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
   }
-}
+} */
