--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@
 @import url('./container.css');
 @import url('./animations.css');
 
-/* Sections style */
+/* ====================Spinner==================== */
 .loader {
   display: none;
   position: relative;
@@ -24,6 +24,7 @@
   background-size: 20px auto;
   background-position: 0 0, 40px 0, 80px 0, 120px 0;
   animation: pgfill 1s linear infinite;
+  margin: auto;
 }
 
 @keyframes pgfill {
@@ -60,4 +61,147 @@
 }
 .loader.is-pending {
   display: block;
+}
+
+/* ====================Form==================== */
+
+.form {
+  display: flex;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.query {
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+  outline: transparent;
+  background-color: transparent;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.query::placeholder {
+  color: #808080;
+}
+
+.query:hover {
+  border-color: #000;
+}
+
+.query:focus {
+  border-color: #4e75ff;
+}
+
+form > button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border-radius: 8px;
+  border: none;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4e75ff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+form > button:hover,
+form > button:focus {
+  background-color: #6c8cff;
+}
+/* ====================Gallery==================== */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 24px;
+}
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  width: calc((100% - 48px) / 3);
+  height: 248px;
+  border: 1px solid #808080;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-item:hover {
+  scale: 1.05;
+}
+
+.gallery-link {
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-image {
+  width: 100%;
+  object-fit: cover;
+}
+
+.characteristics {
+  background-color: #fff;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  gap: 28px;
+  padding: 4px 20px;
+  justify-content: center;
+}
+
+.characteristics span {
+  display: block;
+}
+
+.characteristics-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.characteristics-heading {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.characteristics-item {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+/* ====================izitoast==================== */
+
+.iziToast {
+  width: 400px !important;
+  min-height: 88px !important;
+  font-size: 16px !important;
+  padding: 20px !important;
+  line-height: 1.5 !important;
+  letter-spacing: 0.03em !important;
+  color: #fafafb !important;
+  border-bottom: 2px solid #ffbebe !important;
+  border-radius: 4px !important;
 }
